css/main.css
body {
  background-color: #111111;
}

html, body {
  height: 100%;
}

canvas {
  display: block;
  position: fixed;
  z-index: 0;
}

u {
  text-decoration: none;
  border-bottom: 1px solid white;
}

.terminal-colour {
  color: #33e3f5;
}

#particles-js {
  z-index: 0;
}

#home {
  position: relative;
}

.overlay {
  position: relative;
  min-height: 100%;
}

.body-header {
  color: white;
  font-size: 40pt;
  font-family: 'Roboto', sans-serif;
  text-align: center;
  margin-top: 30px;
}

@media (min-width: 1100px) and (min-height: 900px) {
  .body-header {
    font-size: 60pt;
    margin-top: 200px;
  }
}

.body-subheader {
  color: white;
  font-size: 28pt;
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: 400;
  margin-left: -30px;
  margin-bottom: 30px;
}

@media (max-width: 800px) {
  .body-subheader {
    margin-left: 0px;
  }
}

.body-paragraph {
  color: white;
  font-size: 14pt;
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: 300;
  text-align: left;
}

.body-paragraph-header {
  color: white;
  font-size: 22pt;
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: 300;
  text-align: left;
}

.body-paragraph-subheader {
  color: white;
  font-size: 18pt;
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: 200;
  text-align: left;
}

.body-paragraph-heavy {
  color: white;
  font-size: 14pt;
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: 400;
  text-align: left;
}

.body-paragraph-light {
  color: white;
  font-size: 12pt;
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: 300;
  text-align: center;
}

.body-paragraph-container {
  max-width: 500px;
  margin: auto;
  margin-top: 25px;
}

.social-links {
  text-align: center;
  display: block;
  margin-bottom: 20px;
  margin-top: 20px;
}

.social-links ul {
  padding: 0px 0px 0px 0px;
  display: block;
  text-align: center;
}

.social-links li {
  display: inline-block;
  cursor: pointer;
  margin-right: 10px;
}

.social-links a {
  display: block;
  color: white;
  /*-o-transition:.2s ease-out;
  -ms-transition:.2s ease-out;
  -moz-transition:.2s ease-out;
  -webkit-transition:.2s ease-out;*/
}

.social-links a:hover {
  color: #33e3f5;
}

.social-links a:not(:hover) {
  opacity: .25;
  transition: 1s;
}

.nav-main {
  height: 100px;
	text-align: center;
  position: absolute;
  bottom: 200px;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
}

@media (max-height: 800px) {
  .nav-main {
    bottom: 0;
  }
}

.nav-main ul {
  width: 500px;
  display: block;
  border-top: 1px solid white;
  text-align: center;
  padding: 0px 0px 0px 0px;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
}

.nav-main li {
  display:inline-block;
  margin-right: 10px;
  margin-left: 10px;
  cursor: pointer;
}

.nav-main a {
  display: block;
  color: white;
  text-transform: uppercase;
  padding-top: 8px;
  border-top: 3px solid transparent;
  -o-transition:.5s;
  -ms-transition:.5s;
  -moz-transition:.5s;
  -webkit-transition:.5s;
}

.nav-main a:hover {
  border-top: 3px solid white;
  text-decoration: none;
}

.nav-main i {
  -o-transition:.5s;
  -ms-transition:.5s;
  -moz-transition:.5s;
  -webkit-transition:.5s;
}

.nav-main a:hover > i {
  color: #33e3f5;
}

.nav-fixed {
  opacity: 0;
  display: block;
  position: fixed;
  height: 100px;
  top: 25px;
  right: 25px;
  text-align: center;
  white-space: nowrap;
  z-index: 1;
}

.nav-fixed ul {
  width: 300px;
  display: block;
  border-bottom: 1px solid white;
  text-align: center;
  padding: 0px 0px 0px 0px;
}

.nav-fixed li {
  display: inline-block;
  margin-right: 5px;
  margin-left: 5px;
  cursor: pointer;
}

.nav-fixed a {
  display: block;
  color: white;
  text-transform: uppercase;
  padding-bottom: 5px;
  border-bottom: 3px solid transparent;
  -o-transition:.5s;
  -ms-transition:.5s;
  -moz-transition:.5s;
  -webkit-transition:.5s;
}

.nav-fixed a:hover {
  border-bottom: 3px solid white;
  text-decoration: none;
}

.navbar-fixed .highlight {
  border-bottom: 3px solid white;
  text-decoration: none;
}

.bubbles-button {
  position: absolute;
  bottom: 25px;
  left: 25px;
}

.bubbles-button a {
  color: #444444;
  font-size: 10pt;
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: 400;
  cursor: pointer;
  -o-transition:.15s;
  -ms-transition:.15s;
  -moz-transition:.15s;
  -webkit-transition:.15s;
}

.bubbles-button a:hover {
  color: #33e3f5;
  text-decoration: none;
}

#about {
  position: relative;
  height: auto;
  background-color: #161616;
  padding-bottom: 30px;
}

.current-projects {
  color: white;
  font-size: 14pt;
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: 300;
  text-align: left;
  padding-left: 20px;
  list-style-type: square;
}

.project-link {
  color: #777777;
  font-size: 14pt;
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: 400;
  cursor: pointer;
  -o-transition:.15s;
  -ms-transition:.15s;
  -moz-transition:.15s;
  -webkit-transition:.15s;
}

.project-link:hover {
  color: #33e3f5;
  text-decoration: none;
}

/*.project-link:visited {
  color: #fc6fd9;
}*/

.project-link:visited:hover {
  color: #33e3f5;
  text-decoration: none;
}

#projects {
  position: relative;
  height: auto;
  background-color: rgba(28, 28, 28, 0.85);
  padding-bottom: 30px;
}

.top-buffer {
  padding-top: 30px;
}

.project-image {
  z-index: 0;
  border: 1px solid #777777;
  border-radius: 8px;
}

/*.row.row-grid [class*="col-"] {
  margin-top: 25px;
}*/

.mt-10 {
  margin-top: 10px;
}

.image-hover a img {
  opacity: 1;
  -webkit-transition: .3s ease-in-out;
  transition: .3s ease-in-out;
}

.image-hover a:hover img {
  opacity: .5;
}

#contact {
  position: relative;
  height: auto;
  background-color: #212121;
}

.contact-email {
  margin-bottom: 0px;
}

.contact-email a {
  color: #777777;
  font-size: 14pt;
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: 400;
  cursor: pointer;
  -o-transition:.15s;
  -ms-transition:.15s;
  -moz-transition:.15s;
  -webkit-transition:.15s;
}

.contact-email a:hover {
  color: #33e3f5;
  text-decoration: none;
}

::-webkit-scrollbar-track {
	background-color: #161616;
}

::-webkit-scrollbar {
	width: 4px;
	background-color: #777777;
}

::-webkit-scrollbar-thumb {
	background-color: #777777;
}

#arrow-btn {
  cursor: pointer;
}

.scroll-arrow {
  position: absolute;
  left: 50%;
  bottom: 5vh;
  display: block;
  text-align: center;
  font-size: 20px;
  z-index: 100;
  text-decoration: none;
  text-shadow: 0;
  width: 15px;
  height: 15px;
  border-bottom: 2px solid #fff;
  border-right: 2px solid #fff;
  -webkit-transform: translate(-50%, 0%) rotate(45deg);
  -moz-transform: translate(-50%, 0%) rotate(45deg);
  transform: translate(-50%, 0%) rotate(45deg);
  -webkit-animation: fade_move_down 2s ease-in-out infinite;
  -moz-animation: fade_move_down 2s ease-in-out infinite;
  animation: fade_move_down 2s ease-in-out infinite;
}

@-webkit-keyframes fade_move_down {
  0% {
    -webkit-transform:translate(0, -10px) rotate(45deg);
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    -webkit-transform:translate(0, 10px) rotate(45deg);
    opacity: 0;
  }
}

@-moz-keyframes fade_move_down {
  0% {
    -moz-transform:translate(0, -10px) rotate(45deg);
    opacity: 0;
  }
  50% {
      opacity: 1;
    }
  100% {
    -moz-transform:translate(0, 10px) rotate(45deg);
    opacity: 0;
  }
}

@keyframes fade_move_down {
  0% {
    transform:translate(0, -10px) rotate(45deg);
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    transform:translate(0, 10px) rotate(45deg);
    opacity: 0;
  }
}
/* ==========================================================================
   Author's custom styles
   ========================================================================== */

